--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <description>Bringing Investors and Businesses together</description>
   <properties>
     <spring-cloud.version>2020.0.3</spring-cloud.version>
+    <spring-cloud-gcp.version>2.0.2</spring-cloud-gcp.version>
     <org.projectlombok.version>1.18.20</org.projectlombok.version>
     <java.version>11</java.version>
     <spring-boot-admin.version>2.3.1</spring-boot-admin.version>
@@ -22,7 +23,22 @@
     <sonar.host.url></sonar.host.url>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
   </properties>
-  <dependencyManagement />
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>spring-cloud-gcp-dependencies</artifactId>
+        <version>${spring-cloud-gcp.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
